# rpeps

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: template.md
docs/rpeps/: RPEP-0000.md
