[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpeps"
version = "0.0.0"
description = 'ReactPy Enhancement Proposals'
requires-python = ">=3.7"
license = "MIT"
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-git-authors-plugin",
  "mkdocs-minify-plugin",
  "mkdocs-section-index",
]
